fix: bot style & scrollbar

--- a/assets/css/style.bot.css
+++ b/assets/css/style.bot.css
@@ -104,7 +104,7 @@ CHAT BOT STYLING
   background-color: #fff;
 
   box-shadow: rgba(0, 0, 0, 0.1) 0 12px 24px 0;
-  border-radius: 15px;
+  border-radius: 8px;
 }
 
 .typing-wrapper {
@@ -181,6 +181,8 @@ CHAT BOT STYLING
 // USER
 */
 .chat-message.user {
+  display: flex;
+  align-items: center;
   animation: fade-in-right 0.2s linear 0.4s both;
   background: #a0a0a0;
   color: #fff;
@@ -240,6 +242,7 @@ CHAT BOT STYLING
 .input { animation: fadeInGrownIn 0.5s ease; }
 
 .bot-container .input input {
+  padding: 0 10px;
   border: none;
   color: #000;
   background: none;
@@ -247,7 +250,7 @@ CHAT BOT STYLING
   font-size: 14px;
 }
 
-.input input:focus { outline: none; }
+.input input:focus { outline: none !important; box-shadow: none !important; }
 .input input::-webkit-input-placeholder { color: #c3c3c3; }
 .input input:-ms-input-placeholder { color: #c3c3c3; }
 .input input::-moz-placeholder { color: #c3c3c3; }
@@ -400,19 +403,4 @@ CHAT BOT STYLING
   .input input {
     font-size: 16px;
   }
-}
-
-
-/*
-// CUSTOM SCROLL BAR
-*/
-
-/* Hide scrollbar in Chrome (Webkit) */
-.bot-chat-wrapper::-webkit-scrollbar {
-  width: 0px;
-}
-
-/* Hide scrollbar in Firefox */
-.bot-chat-wrapper {
-  scrollbar-width: none;
 }
